// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue-component (Composition API) creation should throw an error if there is no parent tag 1`] = `"ngVue components must have a parent tag or they will not render"`;

exports[`vue-component (Composition API) remove should remove a vue component when ng-if directive flag toggles from true to false 1`] = `
<div
  class="ng-scope"
>
  <!-- ngIf: visible -->
  <span>
    Hello  
  </span>
  <!-- end ngIf: visible -->
</div>
`;

exports[`vue-component (Composition API) remove should remove a vue component when ng-if directive flag toggles from true to false 2`] = `
<div
  class="ng-scope"
>
  <!-- ngIf: visible -->
</div>
`;

exports[`vue-component (Composition API) slots should render a vue component with a button in the slot content 1`] = `
<div
  class="ng-scope"
>
  <div>
    <span>
      Welcome, John Doe!
    </span>
    <button
      ng-click="onClick()"
    >
      Click me!
    </button>
  </div>
</div>
`;

exports[`vue-component (Composition API) slots should render a vue component with only a text node in the slot content 1`] = `
<div
  class="ng-scope"
>
  <div>
    <span>
      Welcome, John Doe!
    </span>
    <span>
      Hello, World!
    </span>
  </div>
</div>
`;

exports[`vue-component (Options API) creation should throw an error if there is no parent tag 1`] = `"ngVue components must have a parent tag or they will not render"`;

exports[`vue-component (Options API) remove should remove a vue component when ng-if directive flag toggles from true to false 1`] = `
<div
  class="ng-scope"
>
  <!-- ngIf: visible -->
  <span>
    Hello  
  </span>
  <!-- end ngIf: visible -->
</div>
`;

exports[`vue-component (Options API) remove should remove a vue component when ng-if directive flag toggles from true to false 2`] = `
<div
  class="ng-scope"
>
  <!-- ngIf: visible -->
</div>
`;

exports[`vue-component (Options API) slots should render a vue component with a button in the slot content 1`] = `
<div
  class="ng-scope"
>
  <div>
    <span>
      Welcome, John Doe!
    </span>
    <button
      ng-click="onClick()"
    >
      Click me!
    </button>
  </div>
</div>
`;

exports[`vue-component (Options API) slots should render a vue component with only a text node in the slot content 1`] = `
<div
  class="ng-scope"
>
  <div>
    <span>
      Welcome, John Doe!
    </span>
    <span>
      Hello, World!
    </span>
  </div>
</div>
`;
